<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".categComida">

    <TextView
        android:text="@string/categoria"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btnCarnes"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_height="wrap_content"
            android:text="@string/cat1" />

        <RadioButton
            android:id="@+id/btnSopas"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/cat2" />

        <RadioButton
            android:id="@+id/btnPostres"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/cat3" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:onClick="clickSiguiente"
        android:paddingLeft="40dp"
        android:paddingTop="15dp"
        android:paddingRight="40dp"
        android:paddingBottom="15dp"
        android:text="@string/btnSiguiente"
        android:textSize="20sp" />
</LinearLayout>